--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,13 @@ section {
 }
 .half-width {
   width: 50%;
-  padding-left: 5%;
+  padding-left: 6%;
 }
 /* Do not write image. A image inside half-width class
 selector. It will cover 90% area out of 50%.
 */
 .half-width img {
-  width: 90%;
+  width: 80%;
 }
 .button {
   text-decoration: none;
@@ -41,5 +41,9 @@ selector. It will cover 90% area out of 50%.
 .middle_image {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
-  background-position: right bottom;
+  background-position: right;
+}
+.paraEdit{
+  width: 450px;
+ 
 }
