--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
-*,
+/* *,
 ::before,
-::after{
+::after {
   box-sizing: border-box;
-}
+} */
 h1 {
   font-size: 50px;
 }
@@ -53,12 +53,21 @@ selector. It will cover 90% area out of 50%.
   width: 450px;
 }
 .experience {
-  display: inline-block;
   width: 70%;
   margin-left: 4%;
   margin-right: 4%;
   padding-left: 20px;
- padding-bottom: 40px;
+  padding-bottom: 40px;
   box-shadow: 5px 7px 40px grey;
 }
-
+ #full_stack{
+  border-left: 7px solid tomato;
+} 
+#baby_dev{
+  border-left: 7px solid;
+  border-image: linear-gradient(blue 100%, cyan 100%);
+  border-image-slice: 1;
+}
+footer p{
+  text-align: center;
+}
